Refactoring stage 05